Added pixie dust

--- a/src/main.less
+++ b/src/main.less
@@ -139,8 +139,11 @@ textarea {
 	outline: none;
 }
 
-.ui-dialog .ui-dialog-titlebar {
-	margin-bottom:.5em;
+.ui-dialog {
+	overflow:visible !important; 
+	.ui-dialog-titlebar {
+		margin-bottom:.5em;
+	}
 }
 
 .unitSlider {
