Added a running particle count.
Now max particles will mean something!

--- a/src/main.less
+++ b/src/main.less
@@ -71,6 +71,16 @@ textarea {
 		letter-spacing:1px;
 		font-size: 10px;
 	}
+	#particleCount {
+		position:absolute;
+		top: 22px;
+		padding: 4px 8px;
+		background: rgba(0,0,0,0.3);
+		color: rgba(255,255,255,0.8);
+		font-family:"Lucida Console", Monaco, monospace;
+		letter-spacing:1px;
+		font-size: 10px;
+	}
 	#stageColorContainer {
 		position:absolute;
 		right:10px;
