--- a/src/main.less
+++ b/src/main.less
@@ -62,7 +62,7 @@ textarea {
 	bottom:0;
 	right:400px;
 	background-color:#999;
-	#framerate {
+	.stageInfo {
 		position:absolute;
 		padding: 4px 8px;
 		background: rgba(0,0,0,0.3);
@@ -70,24 +70,7 @@ textarea {
 		font-family:"Lucida Console", Monaco, monospace;
 		letter-spacing:1px;
 		font-size: 10px;
-	}
-	#particleCount {
-		position:absolute;
-		top: 22px;
-		padding: 4px 8px;
-		background: rgba(0,0,0,0.3);
-		color: rgba(255,255,255,0.8);
-		font-family:"Lucida Console", Monaco, monospace;
-		letter-spacing:1px;
-		font-size: 10px;
-	}
-	#stageColorContainer {
-		position:absolute;
-		right:10px;
-		bottom:10px;
-		input {
-			visibility: hidden;
-		}
+		line-height:1.6;
 	}
 }
 
@@ -115,6 +98,7 @@ body.loading {
 	.category {
 		font-weight: bold;
 		width:117px;
+		padding-top:2px;
 		float:left;
 	}
 	.fields {
