Added the new features in the particle library.
Also changed the cursor on all elements with a title to be the help
cursor.

--- a/src/main.less
+++ b/src/main.less
@@ -101,6 +101,9 @@ body.loading {
 		padding-top:2px;
 		float:left;
 	}
+	div[title], span[title] {
+		cursor:help;
+	}
 	.fields {
 		float:left;
 		width:235px;
@@ -123,6 +126,9 @@ body.loading {
 			text-transform: uppercase;
 			font-size:80%;
 			color:#666;
+		}
+		.wideLabel {
+			width: 154px;
 		}
 	}
 }
