--- a/deploy/assets/css/main.css
+++ b/deploy/assets/css/main.css
@@ -1,1 +1,57 @@
-html,button,input,select,textarea{color:#222}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}img{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.chromeframe{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}#content{position:fixed;top:0;left:0;bottom:0;right:400px;background-color:#999}#content .stageInfo{position:absolute;padding:4px 8px;background:rgba(0,0,0,.3);color:rgba(255,255,255,.8);font-family:"Lucida Console",Monaco,monospace;letter-spacing:1px;font-size:10px;line-height:1.6}body.loading #editor *,body.loading #content *{display:none}#editor{width:367px;position:fixed;right:0;top:0;bottom:0;overflow:auto;display:block;padding:20px}#editor .option{margin:0 0 10px;border-bottom:1px solid #bbb;padding-bottom:10px}#editor .category{font-weight:700;width:117px;padding-top:2px;float:left}#editor div[title],#editor span[title]{cursor:help}#editor .fields{float:left;width:235px}#editor .fields .ui-widget{display:block;float:left}#editor .fields .ui-spinner{margin-right:10px}#editor .fields .row{margin-bottom:5px}#editor .fields .label{padding-top:5px;width:40px;margin:0;display:block;float:left;text-transform:uppercase;font-size:80%;color:#666}#editor .fields .wideLabel{width:154px}#alpha .row{height:20px;margin-bottom:5px}#alpha .row:first-child{margin-bottom:20px}#color .row{margin-bottom:5px}#color .row:last-child{margin:0}#customEase{width:214px}#editor .ui-state-focus{outline:0}.ui-selectmenu-button{outline:0}.ui-dialog{overflow:visible!important}.ui-dialog .ui-dialog-titlebar{margin-bottom:.5em}.unitSlider{width:120px;margin-left:45px!important}.slider label{margin-top:10px}.slider .sliderStart{float:left}.slider .sliderEnd{float:right}.slider input{width:30px;position:absolute;left:-45px}.positiveSpinner,.generalSpinner,.frequencySpinner{width:35px}.sliderInput,.colorPicker{width:50px;border-radius:4px;border:1px solid #aaa;padding:4px;margin-right:5px;float:left;display:block}.particleImage{position:relative;display:inline-block}.particleImage .actualImage{width:32px;height:32px;background-color:#999;border-radius:4px;margin:0 2px;padding:4px}.particleImage button{position:absolute;top:0;width:16px!important;height:16px;z-index:1;display:none}.particleImage button .ui-button-text{display:none}.particleImage button .ui-icon{margin-top:-8px;margin-left:-8px}.particleImage .remove{right:2px;top:22px}.particleImage .download{right:22px;top:22px}.particleImage:hover button{display:block}#defaultImageSelector{width:200px}#defaultConfigSelector{width:200px}#imageUpload{margin-top:10px;height:30px}#configDialog textarea{margin-top:15px;width:365px}#emitSpawnType{width:150px}body,html{line-height:1.4;margin:0;padding:0;font-family:Arial,Verdana,sans-serif;font-size:12px;font-weight:400;background-color:#ddd}footer{color:#999;font-size:80%;text-align:center}h3{background:#AFAFAF;color:#fff;padding:5px}.ir{background-color:transparent;border:0;overflow:hidden;}.ir:before{content:"";display:block;width:0;height:100%}.hidden{display:none!important;visibility:hidden}.visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.invisible{visibility:hidden}.clearfix:before,.clearfix:after{content:" ";display:table}.clearfix:after{clear:both}@media print{*{background:transparent!important;color:#000!important;box-shadow:none!important;text-shadow:none!important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}.ir a:after,a[href^="javascript:"]:after,a[href^="#"]:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}img{max-width:100%!important}@page{margin:.5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
+/* ==========================================================================
+   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
+   ========================================================================== */
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+#content {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 400px;
+  background-color: #999;
+}
+#content .stageInfo {
+  width: 110px;
+  position: absolute;
+  padding: 4px 8px;
+  background: rgba(0, 0, 0, 0.3);
+  color: rgba(255, 255, 255, 0.8);
+  font-family: "Lucida Console", Monaco, monospace;
+  letter-spacing: 1px;
+  font-size: 10px;
+  line-height: 1.6;
+  pointer-events: none;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+#editor {
+  width: 400px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow: auto;
+  display: block;
+  padding: 20px;
+  z-index: 2;
+  background: #FAFAFA;
+  border-left: 1px solid rgba(0, 0, 0, 0.5);
+}
+#editor .form-label {
+  font-size: 90%;
+  padding-top: 10px;
+}
+#editor .input-group-addon {
+  font-size: 80%;
+  padding: 6px 0;
+  width: 40px;
+}
+footer {
+  color: #999;
+  font-size: 80%;
+  text-align: center;
+}
+/*# sourceMappingURL=main.css.map */
