Added spinner and slider components to interface

--- a/src/main.less
+++ b/src/main.less
@@ -93,6 +93,7 @@
 	top: 0;
 	bottom: 0;
 	overflow: auto;
+	overflow-x: hidden;
 	display: block;
 	padding: 20px;
 	z-index:2;
@@ -148,6 +149,18 @@
 		font-size:80%;
 		padding: 6px 0;
 		width: 40px;
+	}
+
+	.slider-selection {
+		background: #BABABA;
+	}
+	.slider-handle {
+		opacity:1;
+		background: #666;
+	}
+	.slider-track {
+		background: #fff;
+		border: 1px solid #ccc;
 	}
 }
 
