--- a/deploy/assets/css/main.css
+++ b/deploy/assets/css/main.css
@@ -34,6 +34,7 @@
   top: 0;
   bottom: 0;
   overflow: auto;
+  overflow-x: hidden;
   display: block;
   padding: 20px;
   z-index: 2;
@@ -48,6 +49,17 @@
   font-size: 80%;
   padding: 6px 0;
   width: 40px;
+}
+#editor .slider-selection {
+  background: #BABABA;
+}
+#editor .slider-handle {
+  opacity: 1;
+  background: #666;
+}
+#editor .slider-track {
+  background: #fff;
+  border: 1px solid #ccc;
 }
 footer {
   color: #999;
