--- a/deploy/assets/css/main.css
+++ b/deploy/assets/css/main.css
@@ -1,9 +1,3 @@
-/* ==========================================================================
-   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
-   ========================================================================== */
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
 #content {
   position: fixed;
   top: 0;
@@ -27,13 +21,51 @@
   -webkit-user-select: none;
   user-select: none;
 }
+body.loading #editor *,
+body.loading #content * {
+  display: none;
+}
+.tooltip {
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+legend {
+  cursor: default;
+}
+legend .down,
+legend .up {
+  float: right;
+  font-size: 14px;
+  padding: 6px;
+  display: block;
+  color: #999;
+}
+legend .down {
+  display: none;
+}
+legend .up {
+  display: block;
+}
+legend.collapsed .down {
+  display: block;
+}
+legend.collapsed .up {
+  display: none;
+}
+.btn .glyphicon {
+  padding-right: 4px;
+}
 #editor {
   width: 400px;
   position: fixed;
   right: 0;
   top: 0;
   bottom: 0;
-  overflow: auto;
+  overflow-y: scroll;
   overflow-x: hidden;
   display: block;
   padding: 20px;
@@ -46,12 +78,11 @@
   padding-top: 10px;
 }
 #editor .input-group-addon {
-  font-size: 80%;
   padding: 6px 0;
-  width: 40px;
+  width: 18px;
 }
 #editor .slider-selection {
-  background: #BABABA;
+  background: #eee;
 }
 #editor .slider-handle {
   opacity: 1;
@@ -60,6 +91,35 @@
 #editor .slider-track {
   background: #fff;
   border: 1px solid #ccc;
+}
+.particleImage {
+  position: relative;
+  display: inline-block;
+}
+.particleImage .actualImage {
+  width: 32px;
+  height: 32px;
+  background-color: #999;
+  border-radius: 4px;
+  margin: 0 2px;
+  padding: 4px;
+}
+.particleImage button {
+  position: absolute;
+  top: 0px;
+  z-index: 1;
+  display: none;
+}
+.particleImage .remove {
+  right: -18px;
+  top: 22px;
+}
+.particleImage .download {
+  right: 18px;
+  top: 22px;
+}
+.particleImage:hover button {
+  display: block;
 }
 footer {
   color: #999;
