--- a/src/main.less
+++ b/src/main.less
@@ -1,60 +1,3 @@
-/* ==========================================================================
-   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
-   ========================================================================== */
-
-// html,
-// button,
-// input,
-// select,
-// textarea {
-// 	color: #222;
-// }
-
-// ::-moz-selection {
-// 	background: #b3d4fc;
-// 	text-shadow: none;
-// }
-
-// ::selection {
-// 	background: #b3d4fc;
-// 	text-shadow: none;
-// }
-
-// hr {
-// 	display: block;
-// 	height: 1px;
-// 	border: 0;
-// 	border-top: 1px solid #ccc;
-// 	margin: 1em 0;
-// 	padding: 0;
-// }
-
-// img {
-// 	vertical-align: middle;
-// }
-
-// fieldset {
-// 	border: 0;
-// 	margin: 0;
-// 	padding: 0;
-// }
-
-// textarea {
-// 	resize: vertical;
-// }
-
-// .chromeframe {
-// 	margin: 0.2em 0;
-// 	background: #ccc;
-// 	color: #000;
-// 	padding: 0.2em 0;
-// }
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
 #content {
 	position:fixed;
 	top:0;
@@ -79,12 +22,42 @@
 	}
 }
 
-// body.loading {
-// 	#editor *,
-// 	#content * {
-// 		display:none
-// 	}
-// }
+body.loading {
+	#editor *,
+	#content * {
+		display:none
+	}
+}
+
+.tooltip {
+	pointer-events:none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none; 
+}
+
+legend {
+	cursor:default;
+	.down, .up {
+		float:right;
+		font-size: 14px;
+		padding: 6px;
+		display:block;
+		color:#999;
+	}
+	.down { display:none }  
+	.up { display:block }
+	&.collapsed {
+		.down { display:block}
+		.up { display:none }
+	} 
+}
+
+.btn .glyphicon {
+	padding-right:4px;
+}
 
 #editor {
 	width: 400px;
@@ -92,7 +65,7 @@
 	right: 0;
 	top: 0;
 	bottom: 0;
-	overflow: auto;
+	overflow-y: scroll;
 	overflow-x: hidden;
 	display: block;
 	padding: 20px;
@@ -146,13 +119,12 @@
 		padding-top:10px;
 	}
 	.input-group-addon {
-		font-size:80%;
 		padding: 6px 0;
-		width: 40px;
+		width: 18px;
 	}
 
 	.slider-selection {
-		background: #BABABA;
+		background: #eee;
 	}
 	.slider-handle {
 		opacity:1;
@@ -237,44 +209,35 @@
 // 	display:block;
 // }
 
-// .particleImage {
-// 	position: relative;
-// 	display: inline-block;
-// 	.actualImage {
-// 		width: 32px;
-// 		height: 32px;
-// 		background-color: #999;
-// 		border-radius: 4px;
-// 		margin: 0 2px;
-// 		padding: 4px;
-// 	}
-// 	button {
-// 		position: absolute;
-// 		top: 0px;
-// 		width: 16px !important;
-// 		height: 16px;
-// 		z-index:1;
-// 		display: none;
-// 		.ui-button-text {
-// 			display: none;
-// 		}
-// 		.ui-icon {
-// 			margin-top: -8px;
-// 			margin-left: -8px;
-// 		}
-// 	}
-// 	.remove {
-// 		right: 2px;
-// 		top:22px;
-// 	}
-// 	.download {
-// 		right: 22px;
-// 		top:22px;
-// 	}
-// 	&:hover button {
-// 		display: block;
-// 	}
-// }
+.particleImage {
+	position: relative;
+	display: inline-block;
+	.actualImage {
+		width: 32px;
+		height: 32px;
+		background-color: #999;
+		border-radius: 4px;
+		margin: 0 2px;
+		padding: 4px;
+	}
+	button {
+		position: absolute;
+		top: 0px;
+		z-index:1;
+		display: none;
+	}
+	.remove {
+		right: -18px;
+		top:22px;
+	}
+	.download {
+		right: 18px;
+		top:22px;
+	}
+	&:hover button {
+		display: block;
+	}
+}
 
 // #defaultImageSelector {
 // 	width: 200px;
