--- a/src/main.less
+++ b/src/main.less
@@ -35,7 +35,7 @@ body.loading {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	-o-user-select: none;
-	user-select: none; 
+	user-select: none;
 }
 
 legend {
@@ -47,12 +47,12 @@ legend {
 		display:block;
 		color:#999;
 	}
-	.down { display:none }  
+	.down { display:none }
 	.up { display:block }
 	&.collapsed {
 		.down { display:block}
 		.up { display:none }
-	} 
+	}
 }
 
 .btn .glyphicon {
@@ -113,7 +113,7 @@ legend {
 	// 		width: 154px;
 	// 	}
 	// }
-	// 
+	//
 	.form-label {
 		font-size:90%;
 		padding-top:10px;
@@ -134,6 +134,15 @@ legend {
 		background: #fff;
 		border: 1px solid #ccc;
 	}
+	.colorPicker {
+		padding-right: 0px;
+		padding-left: 32px;
+	}
+}
+
+.minicolors-theme-bootstrap.minicolors-position-right .minicolors-swatch {
+	left: 3px !important;
+	right: auto !important;
 }
 
 // #alpha .row {
@@ -164,7 +173,7 @@ legend {
 // }
 
 // .ui-dialog {
-// 	overflow:visible !important; 
+// 	overflow:visible !important;
 // 	.ui-dialog-titlebar {
 // 		margin-bottom:.5em;
 // 	}
@@ -194,7 +203,7 @@ legend {
 // }
 
 // .positiveSpinner,
-// .generalSpinner, 
+// .generalSpinner,
 // .frequencySpinner {
 // 	width: 35px;
 // }
