--- a/src/main.less
+++ b/src/main.less
@@ -29,16 +29,21 @@ body.loading {
 	}
 }
 
+.user-deselect() {
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-o-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+}
+
 .tooltip {
 	pointer-events:none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	user-select: none;
+	.user-deselect();
 }
 
 legend {
+	.user-deselect();
 	cursor:default;
 	.down, .up {
 		float:right;
@@ -72,51 +77,10 @@ legend {
 	z-index:2;
 	background:#FAFAFA;
 	border-left:1px solid rgba(0,0,0,0.5);;
-	// .option {
-	// 	margin:0 0 10px;
-	// 	border-bottom: 1px solid #bbb;
-	// 	padding-bottom: 10px;
-	// }
-	// .category {
-	// 	font-weight: bold;
-	// 	width:117px;
-	// 	padding-top:2px;
-	// 	float:left;
-	// }
-	// div[title], span[title] {
-	// 	cursor:help;
-	// }
-	// .fields {
-	// 	float:left;
-	// 	width:235px;
-	// 	.ui-widget {
-	// 		display:block;
-	// 		float:left;
-	// 	}
-	// 	.ui-spinner {
-	// 		margin-right: 10px;
-	// 	}
-	// 	.row {
-	// 		margin-bottom:5px;
-	// 	}
-	// 	.label {
-	// 		padding-top:5px;
-	// 		width:40px;
-	// 		margin:0;
-	// 		display:block;
-	// 		float:left;
-	// 		text-transform: uppercase;
-	// 		font-size:80%;
-	// 		color:#666;
-	// 	}
-	// 	.wideLabel {
-	// 		width: 154px;
-	// 	}
-	// }
-	//
 	.form-label {
 		font-size:90%;
 		padding-top:10px;
+		.user-deselect();
 	}
 	.input-group-addon {
 		padding: 6px 0;
@@ -144,79 +108,6 @@ legend {
 	left: 3px !important;
 	right: auto !important;
 }
-
-// #alpha .row {
-// 	height:20px;
-// 	margin-bottom:5px;
-// 	&:first-child {
-// 		margin-bottom:20px;
-// 	}
-// }
-
-// #color .row {
-// 	margin-bottom:5px;
-// 	&:last-child {
-// 		margin: 0;
-// 	}
-// }
-
-// #customEase {
-// 	width:214px
-// }
-
-// #editor .ui-state-focus {
-// 	outline: none;
-// }
-
-// .ui-selectmenu-button {
-// 	outline: none;
-// }
-
-// .ui-dialog {
-// 	overflow:visible !important;
-// 	.ui-dialog-titlebar {
-// 		margin-bottom:.5em;
-// 	}
-// }
-
-// .unitSlider {
-// 	width:120px;
-// 	margin-left: 45px !important;
-// }
-
-// .slider label {
-// 	margin-top: 10px;
-// }
-
-// .slider .sliderStart {
-// 	float: left;
-// }
-
-// .slider .sliderEnd {
-// 	float: right;
-// }
-
-// .slider input {
-// 	width: 30px;
-// 	position: absolute;
-// 	left: -45px;
-// }
-
-// .positiveSpinner,
-// .generalSpinner,
-// .frequencySpinner {
-// 	width: 35px;
-// }
-// .sliderInput,
-// .colorPicker {
-// 	width: 50px;
-// 	border-radius: 4px;
-// 	border: 1px solid #aaa;
-// 	padding: 4px;
-// 	margin-right: 5px;
-// 	float:left;
-// 	display:block;
-// }
 
 .particleImage {
 	position: relative;
@@ -248,193 +139,9 @@ legend {
 	}
 }
 
-// #defaultImageSelector {
-// 	width: 200px;
-// }
-
-// #defaultConfigSelector {
-// 	width: 200px;
-// }
-
-// #imageUpload {
-// 	margin-top: 10px;
-// 	height: 30px;
-// }
-
-// #configDialog textarea {
-// 	margin-top: 15px;
-// 	width: 365px;
-// }
-
-// #emitSpawnType {
-// 	width: 150px;
-// }
-
-// body, html {
-// 	line-height: 1.4;
-// 	margin: 0;
-// 	padding: 0;
-// 	font-family: Arial, Verdana, sans-serif;
-// 	font-size: 12px;
-// 	font-weight: normal;
-// 	background-color: #ddd;
-// }
-
 footer {
 	color:#999;
 	font-size:80%;
 	text-align:center;
+	.user-deselect();
 }
-
-// h3 {
-// 	background:#AFAFAF;
-// 	color:#fff;
-// 	padding:5px;
-// }
-
-
-// /* ==========================================================================
-//    Media Queries
-//    ========================================================================== */
-
-// @media only screen and (min-width: 35em) {
-
-// }
-
-// @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-// 	   only screen and (min-resolution: 144dpi) {
-
-// }
-
-// /* ==========================================================================
-//    Helper classes
-//    ========================================================================== */
-
-// .ir {
-// 	background-color: transparent;
-// 	border: 0;
-// 	overflow: hidden;
-// 	*text-indent: -9999px;
-// }
-
-// .ir:before {
-// 	content: "";
-// 	display: block;
-// 	width: 0;
-// 	height: 100%;
-// }
-
-// .hidden {
-// 	display: none !important;
-// 	visibility: hidden;
-// }
-
-// .visuallyhidden {
-// 	border: 0;
-// 	clip: rect(0 0 0 0);
-// 	height: 1px;
-// 	margin: -1px;
-// 	overflow: hidden;
-// 	padding: 0;
-// 	position: absolute;
-// 	width: 1px;
-// }
-
-// .visuallyhidden.focusable:active,
-// .visuallyhidden.focusable:focus {
-// 	clip: auto;
-// 	height: auto;
-// 	margin: 0;
-// 	overflow: visible;
-// 	position: static;
-// 	width: auto;
-// }
-
-// .invisible {
-// 	visibility: hidden;
-// }
-
-// .clearfix:before,
-// .clearfix:after {
-// 	content: " ";
-// 	display: table;
-// }
-
-// .clearfix:after {
-// 	clear: both;
-// }
-
-// .clearfix {
-// 	*zoom: 1;
-// }
-
-// /* ==========================================================================
-//    Print styles
-//    ========================================================================== */
-
-// @media print {
-// 	* {
-// 		background: transparent !important;
-// 		color: #000 !important; /* Black prints faster: h5bp.com/s */
-// 		box-shadow:none !important;
-// 		text-shadow: none !important;
-// 	}
-
-// 	a,
-// 	a:visited {
-// 		text-decoration: underline;
-// 	}
-
-// 	a[href]:after {
-// 		content: " (" attr(href) ")";
-// 	}
-
-// 	abbr[title]:after {
-// 		content: " (" attr(title) ")";
-// 	}
-
-// 	/*
-// 	 * Don't show links for images, or javascript/internal links
-// 	 */
-
-// 	.ir a:after,
-// 	a[href^="javascript:"]:after,
-// 	a[href^="#"]:after {
-// 		content: "";
-// 	}
-
-// 	pre,
-// 	blockquote {
-// 		border: 1px solid #999;
-// 		page-break-inside: avoid;
-// 	}
-
-// 	thead {
-// 		display: table-header-group; /* h5bp.com/t */
-// 	}
-
-// 	tr,
-// 	img {
-// 		page-break-inside: avoid;
-// 	}
-
-// 	img {
-// 		max-width: 100% !important;
-// 	}
-
-// 	@page {
-// 		margin: 0.5cm;
-// 	}
-
-// 	p,
-// 	h2,
-// 	h3 {
-// 		orphans: 3;
-// 		widows: 3;
-// 	}
-
-// 	h2,
-// 	h3 {
-// 		page-break-after: avoid;
-// 	}
-// }
