Added ability to use PathParticles.
Also updated to use SpringRoll instead of CloudKid Framework.

--- a/src/main.less
+++ b/src/main.less
@@ -102,6 +102,9 @@ legend {
 		padding-right: 0px;
 		padding-left: 32px;
 	}
+	#extraData {
+		height: 120px;
+	}
 }
 
 .minicolors-theme-bootstrap.minicolors-position-right .minicolors-swatch {
